# study

course1/SD/lab01_n10/: lab01_n10.cpp  lab01_n10.vcxproj  lab01_n10.vcxproj.filters
course1/SD/lab01_n11/: lab01_n11.cpp  lab01_n11.vcxproj  lab01_n11.vcxproj.filters
course1/SD/lab01_n2/: lab01_n2.vcxproj  lab01_n2.vcxproj.filters  lab01_n2cpp.cpp
course1/SD/lab01_n3/: lab01_n3.cpp  lab01_n3.vcxproj  lab01_n3.vcxproj.filters
course1/SD/lab01_n4/: lab01_n4.cpp  lab01_n4.vcxproj  lab01_n4.vcxproj.filters
course1/SD/lab01_n5/: lab01_n5.cpp  lab01_n5.vcxproj  lab01_n5.vcxproj.filters
course1/SD/lab01_n6/: lab01_n6.cpp  lab01_n6.vcxproj  lab01_n6.vcxproj.filters
course1/SD/lab01_n7/: lab01_n7.cpp  lab01_n7.vcxproj  lab01_n7.vcxproj.filters
course1/SD/lab01_n8/: lab01_n8.cpp  lab01_n8.vcxproj  lab01_n8.vcxproj.filters
course1/SD/lab01_n9/: lab01_n9.cpp  lab01_n9.vcxproj  lab01_n9.vcxproj.filters
course1/SD/sd_lab01_n1/: file1.txt  file2.txt  lab01_n1.cpp  sd_lab01_n1.sln  sd_lab01_n1.vcxproj  sd_lab01_n1.vcxproj.filters
course1/SD/sd_lab02/: sd_lab02.cpp  sd_lab02.sln  sd_lab02.vcxproj  sd_lab02.vcxproj.filters
course1/SD/sd_lab02_n01/: sd_lab02_n01.cpp  sd_lab02_n01.vcxproj  sd_lab02_n01.vcxproj.filters
course1/SD/sd_lab03_n01/: sd_lab03_n01.cpp  sd_lab03_n01.sln  sd_lab03_n01.vcxproj  sd_lab03_n01.vcxproj.filters
course1/SD/sd_lab05/: Output.txt  sd_lab05.cpp  sd_lab05.sln  sd_lab05.vcxproj  sd_lab05.vcxproj.filters
course1/SD/sd_lab06/: sd_lab06.cpp  sd_lab06.sln  sd_lab06.vcxproj  sd_lab06.vcxproj.filters
course1/SD/sd_lab07/: sd_lab07.cpp  sd_lab07.sln  sd_lab07.vcxproj  sd_lab07.vcxproj.filters
course1/SD/отчеты_сд/: ~$_7ЛАБА.docx  СД_1ЛАБА.docx  СД_2ЛАБА.docx  СД_3ЛАБА.docx  СД_4ЛАБА.docx  СД_5ЛАБА.docx  СД_6ЛАБА.docx  СД_7ЛАБА.docx  СД_8ЛАБА.docx  СД_9ЛАБА.docx  для дедули.docx
course1/КЯР/лаба1/: fourth.html  index.html  second.html  third.html  vopr12.html
course1/КЯР/лаба10/: 1280px.css  zadanie1.css  zadanie1.html
course1/КЯР/лаба11/: zadanie1.html
course1/КЯР/лаба12/: zadanie1.css  zadanie1.xml  zadanie2.xml  zadanie3.xml  zadanie3Schema.xsd
course1/КЯР/лаба13/: zadanie1.xml  zadanie1.xsl  zadanie2.xml  zadanie2.xsl
course1/КЯР/лаба15(ТОЛЬКО ДЛЯ ПОИТ)/: zadanie1.css  zadanie1.html  (+3 more)
course2/DB/: UNIVER.sql  kr.sql  kr2.sql  lab10.sql  lab4.sql  lab5.sql  lab6.sql  lab7.sql  lab9.sql
course2/DPI/: lab3.drawio  лаб14.docx  лаб3.docx  лаб4.docx  лаб5.docx
course2/MP/: ОтчетЛаб1.docx  ОтчетЛаб2.docx  ОтчетЛаб3.docx  ОтчетЛаб4.docx  ОтчетЛаб5.docx  ОтчетЛаб6.docx  ОтчетЛаб7.docx  ОтчетЛаб8.docx  лаб1график1.xlsx  мп2.xlsx  мп4.xlsx
course2/OIB/: оиб1лаб.docx  оиб2.docx  оиб3.docx  оиб4_1.docx  оиб4_2.docx  оиб5.docx  оиб6.docx  оиб7.docx  оиб8.docx  оиб9.docx
course2/PP/: pp3.drawio  пп1.drawio
course2/SMMIF/: lab1.xlsx  lab2.xlsx  lab2v28.xlsx  lab4v26.xlsx  Тема 9.xlsx
course2/STAIRIS/: СТАРИС.docx  введение_старис.docx  постановка_старис.docx  роли_и_функции_старис.docx  соглашение_организация_старис.docx  схема_последовательности.drawio
course3/AIS/: админка-лаб1.docx  админка-лаб2.docx  админка-лаб3.docx  админка-лаб4.docx  админка-лаб5.docx  админка-лаб6.docx  админка-лаб7.docx
course3/KMS-exam-5sem/: 1.fla  2.fla  2.swf  2_HTML5 Canvas.fla  2_HTML5 Canvas.html  2_HTML5 Canvas.js  3-4-5-6.max  8.html
course3/OSI/: ОС-лаб1.docx  ОС-лаб2.docx  ОС-лаб3.docx  ОС-лаб4.docx  ОС-лаб5.docx  ОС-лаб6.docx  ОС-лаб7.docx  ОС-лаб8.docx  ОС-лаб9.docx
course3/PPO/: ппо-лаб1.docx  ппо-лаб2-общее.drawio  ппо-лаб2.docx  ппо-лаб3.docx  ппо-лаб3.drawio  ппо-лаб4.docx  ппо-лаб4.drawio  ппо-лаб5-7.drawio  ппо-лаб5-пакеты.drawio  ппо-лаб5.docx  ппо-лаб6.docx  ппо-лаб7.docx
course3/PSP/: ПСП-лаб1-отчет.docx
course3/RIS/: lab3-1.sql  lab3.sql
course3/RPR/: LibraryFirst.1.0.2.nupkg  README.md  RPR-lab1.1.0.1.nupkg  РПР-отчет-лаб1.docx  РПР-отчет-лаб2.docx  РПР-отчет-лаб3.docx  РПР-отчет-лаб4.docx  РПР-отчет-лаб5.docx  РПР-отчет-лаб6.docx  РПР-отчет-лаб7.docx  РПР-отчет-лаб8.docx
course3/SP/SP5/SP_lab5/: CMakeLists.txt
course3/SP/SP5/SP_lab5/DemoService/: CMakeLists.txt  DemoService.c  config.ini
course3/SP/SP5/SP_lab5/ServiceCtl/: CMakeLists.txt  ServiceCtl.c
course3/SP/SP5/SP_lab5/demoserviced/: demoserviced.c  demoserviced.conf  demoserviced.service
course3/SP/lab1/t3/: CMakeLists.txt
course3/SP/lab1/t3/C-Project/: CMakeLists.txt
course3/SP/lab1/t3/C-Project/src/: Lab-01C.c
course3/SP/lab1/t3/CSharp-Project/: CMakeLists.txt
course3/SP/lab1/t3/CSharp-Project/src/: Lab-01CS.cs
course3/SP/lab3/: CMakeLists.txt  dll++_log.txt  dll_log.txt  лаб3-отчет.docx
course3/SP/lab3/GDVDLib/: CMakeLists.txt  GDVDLib.def  binary_search.h
course3/SP/lab3/GDVDLib++/: CMakeLists.txt  binary_search.cpp  binary_search.hpp
course3/SP/lab3/GDVLib/: CMakeLists.txt
course3/SP/lab3/Lab-03a/: CMakeLists.txt  main.c
course3/SP/lab3/Lab-03b-Explicit/: CMakeLists.txt  main.c
course3/SP/lab3/Lab-03b-Implicit/: CMakeLists.txt  main.c
course3/SP/lab3/Lab-03c/: Lab-03c  Lab-03c.c
course3/SP/lab3/LibGDVd/: LibGDVd.c
course3/SP/lab3/clang/GDVDLib++/src/: dllmain.cpp
course3/SP/lab3/clang/GDVDLib/src/: binary_search.c  dllmain.c
course3/SP/lab3/clang/Lab-03a/src/: Lab-03a.c
course3/SP/lab4/ComSampleProxy/: CMakeLists.txt  IComTest.def  IComTest.h  IComTest.idl  IComTest_h.h  IComTest_i.c  IComTest_p.c  dlldata.c
course3/SP/lab4/ComSampleServer/: CComServerTest.cpp  CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  ComSampleServer.def  ComSampleServerCreateInstances.h  ComSampleServerGuids.h  Dll.cpp  Dll.h  pch.h
course3/SP/lab4/ComSampleService/: CComServiceTest.cpp  CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  ComSampleServiceCreateInstances.h  ComSampleServiceGuids.h  Infrastructure.h  Main.cpp  Register.cpp  Service.cpp  pch.h
course3/TPO/: lab1.doc  lab2.xlsx  lab3.docx  lab3.xlsx  lab4.xlsx  lab5.xlsx  lab6.xlsx
course4/AIS/: lab3-AIS.docx  lab4-AIS.docx  lab5-AIS.docx  lab6-AIS.docx  lab7-AIS.docx  lab8-AIS.docx
course4/OS/: lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx  lab6.docx  lab7.docx
(+4222 files in other folders)
